--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "node ssr-server.js",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
+    "pre-deploy": "next start && next export",
+    "deploy": "serve ./out",
     "deploy:dev": "yarn build && cross-env NODE_ENV=development node ssr-server.js",
     "deploy:prod": "yarn build && cross-env NODE_ENV=production node ssr-server.js"
   },
