--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "mini-svg-data-uri": "^1.2.3",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.4.6",
-    "tailwindcss-plugins": "^0.3.0"
+    "tailwindcss-plugins": "^0.3.0",
+    "url-loader": "^4.1.0"
   }
 }
